# WanmeiBBSKit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: release.yml
dev_test/: device_info.py  shatest.py
examples/: role_data.py  sms_login.py
tests/: test_device_info.py
wanmeibbs/: consts.py  sha1utils.py
wanmeibbs/basics/: __init__.py  device_generator.py  hybird_url.py  md5utils.py  sha1utils.py
wanmeibbs/models/: __init__.py  device_info.py
wanmeibbs/query/: client.py
wanmeibbs/utils/: __init__.py  request_util.py  url_utils.py
wanmeibbs/utils/_transports/: default.py  user.py
wanmeibbskit/: consts.py  exceptions.py
wanmeibbskit/basics/: __init__.py  client.py  device_generator.py  hybird_url.py  login_session.py  md5utils.py  sha1utils.py
wanmeibbskit/basics/api/: pwcg.py
wanmeibbskit/models/: __init__.py  device_info.py  role_data.py  sms_login.py
wanmeibbskit/models/hotta/: __init__.py  role_data.py
wanmeibbskit/models/pwcgapi/: article_detail.py  other_detail.py  user_detail.py  user_unread_message.py
wanmeibbskit/models/pwgcapi/: __init__.py  article_detail.py  login_response.py  other_articles.py  other_detail.py  role_list.py  user_detail.py
wanmeibbskit/models/userapi/: sms_login.py
wanmeibbskit/query/: bbs.py  client.py  hotta.py
wanmeibbskit/utils/: __init__.py  decorators.py  safely_getters.py  safety_getvalue.py  time_utils.py  url_utils.py
wanmeibbskit/utils/_transports/: default.py  user.py
