[tool.poetry]
name = "wanmeibbskit"
version = "0.3.3"
description = "Rev. request library from WanmeiBBS"
authors = ["Wansn <2632324507@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AidaCafe/WanmeiBBSKit"
documentation = "https://github.com/AidaCafe/WanmeiBBSKit"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
cryptography = "^40.0.2"
orjson = "^3.8.12"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
