[tool.poetry]
name = "wanmeibbskit"
version = "0.3.3"
description = "Rev. request library from WanmeiBBS"
authors = ["Wansn <2632324507@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AidaCafe/WanmeiBBSKit"
documentation = "https://github.com/AidaCafe/WanmeiBBSKit"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
cryptography = "^41.0.1"
orjson = "^3.9.1"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.datamodel.dependencies]
datamodel-code-generator = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
